2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation of Scribo.

	* doc/scribo/binarization/binarization.dox,
	* doc/scribo/binarization/kim.dox,
	* doc/scribo/binarization/otsu.dox,
	* doc/scribo/binarization/wolf.dox,
	* doc/scribo/core/component_set.dox,
	* doc/scribo/filter/component_groups.dox,
	* doc/scribo/filter/component_links.dox,
	* doc/scribo/filter/components.dox,
	* doc/scribo/filter/elements.dox,
	* doc/scribo/filter/line_links.dox,
	* doc/scribo/filter/paragraphs.dox,
	* doc/scribo/primitive/extract/separators.dox,
	* scribo/core/component_info.hh,
	* scribo/core/tag/component.hh: Add more documentation.

	* doc/scribo/layout/layout.dox,
	* doc/scribo/namespaces.dox,
	* doc/scribo/primitive/extract/components.dox,
	* doc/scribo/primitive/extract/extract.dox: New.

	* scribo/binarization/internal/local_threshold_core.hh,
	* scribo/binarization/internal/singh_formula.hh,
	* scribo/binarization/kim.hh,
	* scribo/binarization/niblack_fast.hh,
	* scribo/binarization/niblack_threshold.hh,
	* scribo/binarization/otsu.hh,
	* scribo/binarization/otsu_threshold.hh,
	* scribo/binarization/sauvola_ms_split.hh,
	* scribo/binarization/singh.hh,
	* scribo/binarization/wolf.hh,
	* scribo/binarization/wolf_fast.hh,
	* scribo/core/component_set.hh,
	* scribo/core/concept/serializable.hh,
	* scribo/core/object_links.hh,
	* scribo/debug/logger.hh,
	* scribo/filter/paragraphs_in_borders.hh,
	* scribo/filter/separators_in_borders.hh,
	* scribo/filter/separators_vert_in_borders.hh,
	* scribo/layout/xy_cut.hh,
	* scribo/primitive/extract/components.hh,
	* scribo/primitive/extract/lines_v_single.hh,
	* scribo/subsampling/bilinear.hh,
	* scribo/text/merging_hdoc.hh: Fix existing documentation.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Replace \fixme with FIXME.

	* scribo/binarization/global_threshold_auto.hh,
	* scribo/binarization/internal/niblack_formula.hh,
	* scribo/binarization/niblack_threshold.hh,
	* scribo/binarization/sauvola_ms.hh,