@@ -1,5 +1,5 @@
-# Copyright (C) 2011, 2012 EPITA Research and Development Laboratory
-# (LRDE)
+# Copyright (C) 2011, 2012, 2013 EPITA Research and Development
+# Laboratory (LRDE)
 #
 # This file is part of Olena.
 #
@@ -32,9 +32,9 @@ REPEAT_BRIEF           = YES
 ABBREVIATE_BRIEF       =
 ALWAYS_DETAILED_SEC    = YES
 INLINE_INHERITED_MEMB  = YES
-FULL_PATH_NAMES        = NO
+FULL_PATH_NAMES        = YES
 STRIP_FROM_PATH        = @top_srcdir@/scribo
-STRIP_FROM_INC_PATH    =
+STRIP_FROM_INC_PATH    = @top_srcdir@/scribo
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = YES
 MULTILINE_CPP_IS_BRIEF = NO
@@ -46,7 +46,7 @@ OPTIMIZE_OUTPUT_FOR_C  = NO
 OPTIMIZE_OUTPUT_JAVA   = NO
 BUILTIN_STL_SUPPORT    = YES
 IDL_PROPERTY_SUPPORT   = NO
-DISTRIBUTE_GROUP_DOC   = NO
+DISTRIBUTE_GROUP_DOC   = YES
 SUBGROUPING            = YES
 INLINE_GROUPED_CLASSES = NO
 SORT_GROUP_NAMES       = YES
@@ -71,6 +71,7 @@ INLINE_INFO            = YES
 SORT_MEMBER_DOCS       = YES
 SORT_BRIEF_DOCS        = YES
 SORT_BY_SCOPE_NAME     = YES
+SORT_MEMBERS_CTORS_1ST = YES
 GENERATE_TODOLIST      = NO
 GENERATE_TESTLIST      = YES
 GENERATE_BUGLIST       = YES
@@ -105,9 +106,10 @@ EXCLUDE                = @top_srcdir@/scribo/demo			\
                          @top_srcdir@/scribo/sandbox 			\
                          @top_srcdir@/scribo/doc/user-refman 		\
                          @top_srcdir@/scribo/doc/devel-refman		\
-                         @top_srcdir@/scribo/tests/unit_test
+                         @top_srcdir@/scribo/tests/unit_test		\
+                         @top_srcdir@/scribo/+*
 EXCLUDE_SYMLINKS       = YES
-EXCLUDE_PATTERNS       = *spe.hh
+EXCLUDE_PATTERNS       = *.spe.hh *.moc.cc
 EXCLUDE_SYMBOLS	       = *_ mln::trait::*
 EXAMPLE_PATH           = @top_srcdir@/scribo/doc/examples	    \
 			 @top_srcdir@/scribo/doc/outputs	    \
@@ -143,7 +145,7 @@ VERBATIM_HEADERS       = YES
 #---------------------------------------------------------------------------
 ALPHABETICAL_INDEX     = YES
 COLS_IN_ALPHA_INDEX    = 5
-IGNORE_PREFIX          = mln::
+IGNORE_PREFIX          = scribo::
 #---------------------------------------------------------------------------
 # configuration options related to the HTML output
 #---------------------------------------------------------------------------
