@@ -1,4 +1,5 @@
 <doxygenlayout version="1.0">
+  <!-- Generated by doxygen 1.8.3.1-20130209 -->
   <!-- Navigation index tabs for HTML output -->
   <navindex>
     <tab type="mainpage" visible="yes" title="Scribo"/>
@@ -18,7 +19,6 @@
       <tab type="filelist" visible="yes" title="" intro=""/>
       <tab type="globals" visible="yes" title="" intro=""/>
     </tab>
-    <tab type="dirs" visible="yes" title="" intro=""/>
     <tab type="examples" visible="yes" title="" intro=""/>
   </navindex>
 
